# qa-automator

./: .env.example  .gitignore  PROJECT.json  README.md  config.yaml  pyproject.toml
.cursor/skills/maestro-test-writing/: SKILL.md
skills/maestro-test-writing/: SKILL.md
src/: agents.py  main.py  policies.py  tasks.py
src/tools/: __init__.py  appflow_tool.py  maestro_tool.py  qase_parser.py  screen_inspector_tool.py  state_tracker.py
tests/: sample_inputs.md
